entity_macros/tests/ui/derive/ent/unsupported-field-type-of-array.stderr
error: Arrays are not supported as field types
  --> $DIR/unsupported-field-type-of-array.rs:18:15
   |
18 |     my_field: [u32; 3],
   |               ^^^^^^^^
